feature: support pipeline yaml

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,5 +21,7 @@ builds:
 dist: bin
 archives:
 - name_template: "opscli-v{{ .Version }}-{{ .Os }}-{{ .Arch }}"
+  files:
+    - pipeline/*
 changelog:
   skip: true
