--- a/pipeline/kubenetes/velero-backup.yaml
+++ b/pipeline/kubenetes/velero-backup.yaml
@@ -1,8 +1,8 @@
 name: Backup Kubernetes Using Velero
 variables:
-  ClusterName: test
-  Version: 4
-  VeleroVersion: v1.9.2
+  cluster_name: test
+  version: 4
+  velero_version: v1.9.2
 steps:
   - name: Backup all
-    script: ./velero-${VeleroVersion}-linux-amd64/velero backup create ${ClusterName}-${Version}
+    script: ./velero-${velero_version}-linux-amd64/velero backup create ${cluster_name}-${version}
