--- a/pipeline/hosts/addauthorizedkeys.yaml
+++ b/pipeline/hosts/addauthorizedkeys.yaml
@@ -1,6 +1,6 @@
 name: Add Key
 variables:
-  KeyContent: 
+  key_content: 
 steps:
   - name: Add Key to ~/.ssh/authorized_keys
-    script: echo "${KeyContent}" >> ~/.ssh/authorized_keys
+    script: echo "${key_content}" >> ~/.ssh/authorized_keys
