--- a/pipeline/kubenetes/velero-restore.yaml
+++ b/pipeline/kubenetes/velero-restore.yaml
@@ -1,8 +1,8 @@
 name: Restore Kubernetes Using Velero
 variables:
-  ClusterName: test
-  Version: 2
-  VeleroVersion: v1.9.2
+  velero_version: v1.9.2
+  cluster_name: test
+  version: 2
 steps:
   - name: Restore all
-    script: ./velero-${VeleroVersion}-linux-amd64/velero restore create  ${ClusterName}-${Version}-restore --from-backup  ${ClusterName}-${Version}
+    script: ./velero-${velero_version}-linux-amd64/velero restore create  ${cluster_name}-${version}-restore --from-backup  ${cluster_name}-${version}
