--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,6 @@ jobs:
         uses: goreleaser/goreleaser-action@v3
         with:
           version: v0.173.2
-          args: release --rm-dist --skip-validate
+          args: release --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
