--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,33 +1,17 @@
 name: release
 
 on:
-  schedule:
-    - cron: "0 21 * * *"
+  push:
+    tags:
+      - '*'
   workflow_dispatch:
 
 jobs:
   GoReleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Delete Latest Tag And Release
-        uses: dev-drprasad/delete-tag-and-release@v0.2.0
-        with:
-          delete_release: true
-          tag_name: latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Checkout Main
         uses: actions/checkout@v3
-      - name: Tag Repo
-        uses: richardsimko/update-tag@v1
-        with:
-          tag_name: latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Checkout Latest
-        uses: actions/checkout@v3
-        with:
-          ref: latest
       - name: Set Up Go
         uses: actions/setup-go@v2
         with:
@@ -36,6 +20,6 @@ jobs:
         uses: goreleaser/goreleaser-action@v3
         with:
           version: v0.173.2
-          args: release --rm-dist --skip-validate
+          args: release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
