--- a/pipeline/kubenetes/add-metrics.yaml
+++ b/pipeline/kubenetes/add-metrics.yaml
@@ -1,6 +1,10 @@
-name: Install MetricsServer
+name: MetricsServer
 variables:
   clear: false
 steps:
   - name: Install MetricsServer
-    script: ScriptInstallMetricsServer(${clear})
+    script: kubectl apply -f GetAvailableUrl(https://raw.githubusercontent.com/shaowenchen/image-syncer/main/kubernetes/metrics-server-0.5.0.yaml)
+    when: ${clear} == false
+  - name: Remove MetricsServer
+    script: kubectl delete -f GetAvailableUrl(https://raw.githubusercontent.com/shaowenchen/image-syncer/main/kubernetes/metrics-server-0.5.0.yaml)
+    when: ${clear} == true
