--- a/pipeline/host/push-file.yaml
+++ b/pipeline/host/push-file.yaml
@@ -1,5 +1,6 @@
 name: Push Local To Remote File
 steps:
   - name: Push To Remote
-    remotefile: "/etc/hosts"
-    localfile: "/etc/hosts"
+    remotefile: /etc/hosts
+    localfile: /etc/hosts
+    direction: upload
