--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,27 +1,25 @@
-project_name: opscli
+project_name: ops
 builds:
--
-  env:
-  - CGO_ENABLED=0
-  main: ./main.go
-  binary: opscli
-  goarch:
-    - amd64
-  goos:
-    - linux
-    - darwin
-  tags:
-    containers_image_openpgp
-  ldflags:
-    - -X "github.com/shaowenchen/opscli/cmd.buildVersion={{ .Version }}"
-    - -X "github.com/shaowenchen/opscli/cmd.buildDate={{ .Date }}"
-    - -X "github.com/shaowenchen/opscli/cmd.gicommitID={{ .ShortCommit }}"
-    - -w
-    - -s
+  - env:
+      - CGO_ENABLED=0
+    main: ./cmd/cli/main.go
+    binary: opscli
+    goarch:
+      - amd64
+    goos:
+      - linux
+      - darwin
+    tags: containers_image_openpgp
+    ldflags:
+      - -X "github.com/shaowenchen/ops/cmd/cli.buildVersion={{ .Version }}"
+      - -X "github.com/shaowenchen/ops/cmd/cli.buildDate={{ .Date }}"
+      - -X "github.com/shaowenchen/ops/cmd/cli.gicommitID={{ .ShortCommit }}"
+      - -w
+      - -s
 dist: bin
 archives:
-- name_template: "opscli-{{ .Version }}-{{ .Os }}-{{ .Arch }}"
-  files:
-    - pipeline/*
+  - name_template: "opscli-{{ .Version }}-{{ .Os }}-{{ .Arch }}"
+    files:
+      - pipeline/*
 changelog:
   skip: true
