--- a/pipeline/kubenetes/add-imagepullsecret.yaml
+++ b/pipeline/kubenetes/add-imagepullsecret.yaml
@@ -9,7 +9,7 @@ variables:
 steps:
   - name: Create Pull Image Secret
     script: kubectl create secret docker-registry ${secret_name} --docker-server=${secret_server} --docker-username=${secret_username} --docker-password=${secret_password} -n ${secret_namespace}
-    when: ${clear} == "false"
+    when: "!${clear}"
   - name: Delete Pull Image Secret
     script: kubectl delete secret ${secret_name} -n ${secret_namespace}
-    when: ${clear} == "true"
+    when: ${clear}
