--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,27 +1,33 @@
 name: build
 on:
   push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push Server
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: shaowenchen/ops-controller:latest
+          tags: shaowenchen/opsserver:latest
+          file: Dockerfile
+      - name: Build and push Controller
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: shaowenchen/opscontroller:latest
+          file: Dockerfile-Server
+
