--- a/task/kubenetes/upgrade-1.16.yaml
+++ b/task/kubenetes/upgrade-1.16.yaml
@@ -8,6 +8,8 @@ spec:
   variables:
     cluster_version: 1.17.17-0
   steps: 
+  - name: add kubernetes repo
+    script: echo -e "[kubernetes]\nname=Kubernetes\nbaseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64\nenabled=1\ngpgcheck=1\nrepo_gpgcheck=1\ngpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg" > /etc/yum.repos.d/kubernetes.repo
   - name: remove kubeadm
     script: yum remove -y kubeadm
     allow_failure: true
