--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,25 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "cli",
-            "type": "go",
-            "request": "launch",
-            "mode": "debug",
-            "cwd": "${workspaceFolder}",
-            "program": "cmd/cli/main.go",
-            "args": [
-            ],
-            "env": {}
-        },
-        {
             "name": "server",
             "type": "go",
             "request": "launch",
             "mode": "debug",
             "cwd": "${workspaceFolder}",
             "program": "cmd/server/main.go",
-            "args": [
-            ],
+            "args": [],
             "env": {}
         },
         {
@@ -33,8 +21,7 @@
             "mode": "debug",
             "cwd": "${workspaceFolder}",
             "program": "main.go",
-            "args": [
-            ],
+            "args": [],
             "env": {}
         }
     ]
