--- a/task/kubenetes/upgrade-1.16m.yaml
+++ b/task/kubenetes/upgrade-1.16m.yaml
@@ -18,12 +18,12 @@ spec:
       script: yum makecache
     - name: remove kubectl
       script: yum remove -y kubectl
-      allow_failure: true
+      allowfailure: true
     - name: install kubectl
       script: yum install -y kubectl-${cluster_version}-0 --disableexcludes=kubernetes
     - name: remove kubeadm
       script: yum remove -y kubeadm
-      allow_failure: true
+      allowfailure: true
     - name: install kubeadm
       script: yum install -y kubeadm-${cluster_version}-0 --disableexcludes=kubernetes
     - name: get kubeadm-config
