--- a/task/kubenetes/upgrade-1.16n.yaml
+++ b/task/kubenetes/upgrade-1.16n.yaml
@@ -14,7 +14,7 @@ spec:
       script: yum makecache
     - name: remove kubeadm
       script: yum remove -y kubeadm
-      allow_failure: true
+      allowfailure: true
     - name: install kubeadm
       script: yum install -y kubeadm-${cluster_version}-0 --disableexcludes=kubernetes
     - name: upgrade node
