--- a/config/crd/patches/cainjection_in_tasks.yaml
+++ b/config/crd/patches/cainjection_in_tasks.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: tasks.ops.chenshaowen.com
+  name: tasks.crd.chenshaowen.com
