--- a/config/crd/bases/crd.chenshaowen.com_hosts.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_hosts.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
-  name: hosts.ops.chenshaowen.com
+  name: hosts.crd.chenshaowen.com
 spec:
-  group: ops.chenshaowen.com
+  group: crd.chenshaowen.com
   names:
     kind: Host
     listKind: HostList
@@ -15,10 +15,25 @@ spec:
     singular: host
   scope: Namespaced
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - jsonPath: .status.hostname
+      name: Hostname
+      type: string
+    - jsonPath: .spec.address
+      name: Address
+      type: string
+    - jsonPath: .status.distribution
+      name: Distribution
+      type: string
+    - jsonPath: .status.cputotal
+      name: CPU
+      type: string
+    - jsonPath: .status.memtotal
+      name: Mem
+      type: string
+    name: v1
     schema:
       openAPIV3Schema:
-        description: Host is the Schema for the hosts API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -36,8 +51,6 @@ spec:
             description: HostSpec defines the desired state of Host
             properties:
               address:
-                type: string
-              name:
                 description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                   Important: Run "make" to regenerate code after modifying this file'
                 type: string
