--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,7 +6,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - hosts
   verbs:
@@ -18,13 +18,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - hosts/finalizers
   verbs:
   - update
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - hosts/status
   verbs:
@@ -32,7 +32,7 @@ rules:
   - patch
   - update
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - tasks
   verbs:
@@ -44,13 +44,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - tasks/finalizers
   verbs:
   - update
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - tasks/status
   verbs:
