--- a/config/rbac/task_viewer_role.yaml
+++ b/config/rbac/task_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: task-viewer-role
 rules:
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - tasks
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - ops.chenshaowen.com
+  - crd.chenshaowen.com
   resources:
   - tasks/status
   verbs:
