--- a/config/crd/bases/crd.chenshaowen.com_hosts.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_hosts.yaml
@@ -31,6 +31,9 @@ spec:
     - jsonPath: .status.memtotal
       name: Mem
       type: string
+    - jsonPath: .status.disktotal
+      name: Disk
+      type: string
     name: v1
     schema:
       openAPIV3Schema:
