--- a/config/crd/bases/crd.chenshaowen.com_hosts.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_hosts.yaml
@@ -34,6 +34,12 @@ spec:
     - jsonPath: .status.disktotal
       name: Disk
       type: string
+    - jsonPath: .status.latesthearttime
+      name: LatestHeartTime
+      type: string
+    - jsonPath: .status.heartstatus
+      name: HeartStatus
+      type: string
     name: v1
     schema:
       openAPIV3Schema:
@@ -65,7 +71,7 @@ spec:
                 type: string
               privatekeypath:
                 type: string
-              timeout:
+              timeoutseconds:
                 format: int64
                 type: integer
               username:
@@ -86,7 +92,7 @@ spec:
                 type: string
               distribution:
                 type: string
-              heartbeat:
+              heartstatus:
                 description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
@@ -94,6 +100,9 @@ spec:
               hostname:
                 type: string
               kernelversion:
+                type: string
+              latesthearttime:
+                format: date-time
                 type: string
               memtotal:
                 type: string
