improvement: call func in task

--- a/task/host/add-opscli.yaml
+++ b/task/host/add-opscli.yaml
@@ -7,4 +7,4 @@ spec:
   desc: Install Opscli
   steps:
     - name: Install Opscli
-      script: ScriptInstallOpscli()
+      script: ${installOpscli()}
