--- a/task/kubenetes/add-imagepullsecret.yaml
+++ b/task/kubenetes/add-imagepullsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: add-imagepullsecret
   namespace: default
 spec:
   desc: Create Pull Image Secret
