--- a/task/host/add-k8sdep.yaml
+++ b/task/host/add-k8sdep.yaml
@@ -1,16 +1,16 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: add-k8sdep
   namespace: default
 spec:
   desc: Install Kubernetes Dependence
   steps:
     - name: Current System
-      script: echo ${os}
+      script: echo ${distribution{}}
     - name: Install for CentOS
       script: yum install -y openssl ebtables ethtool socat ipset ipvsadm conntrack chrony
-      when: ${os} == centos
+      when: ${distribution{}} == centos
     - name: Install for Ubuntu
       script: apt-get install -y openssl ebtables ethtool socat ipset ipvsadm conntrack chrony
-      when: ${os} == ubuntu
+      when: ${distribution{}} == ubuntu
