--- a/task/host/add-localbinpath.yaml
+++ b/task/host/add-localbinpath.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: add-localbinpath
   namespace: default
 spec:
   desc: Set Path
