--- a/task/host/init-os.yaml
+++ b/task/host/init-os.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: init-os
   namespace: default
 spec:
   desc: InitOS
