--- a/task/host/push-file.yaml
+++ b/task/host/push-file.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: push-file
   namespace: default
 spec:
   desc: Push Local To Remote File
