--- a/task/kubenetes/add-metricsserver.yaml
+++ b/task/kubenetes/add-metricsserver.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: add-metricsserver
   namespace: default
 spec:
   desc: MetricsServer
