--- a/task/kubenetes/drain-node.yaml
+++ b/task/kubenetes/drain-node.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: drain-node
   namespace: default
 spec:
   desc: Drain Kubernetes Node
