--- a/task/kubenetes/fix-kernel.yaml
+++ b/task/kubenetes/fix-kernel.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: fix-kernel
   namespace: default
 spec:
   desc: Fix Kernel Configuration
