--- a/task/kubenetes/get-kubeconfig.yaml
+++ b/task/kubenetes/get-kubeconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: get-kubeconfig
   namespace: default
 spec:
   desc: Get Kubeconfig
