--- a/task/kubenetes/renew-cert.yaml
+++ b/task/kubenetes/renew-cert.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: renew-cert
   namespace: default
 spec:
   desc: Renew Cert
