--- a/task/kubenetes/upgrade-1.19m.yaml
+++ b/task/kubenetes/upgrade-1.19m.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: upgrade-1.19m
   namespace: default
 spec:
   desc: Upgrade-K8s-Master-From-1.19-to-1.20
