--- a/task/kubenetes/upgrade-1.19n.yaml
+++ b/task/kubenetes/upgrade-1.19n.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: upgrade-1.19n
   namespace: default
 spec:
   desc: Upgrade-K8s-Node-From-1.17-to-1.18.20-0
