--- a/task/kubenetes/upgrade-base.yaml
+++ b/task/kubenetes/upgrade-base.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: upgrade-base
   namespace: default
 spec:
   desc: Upgrade-K8s-Base
