--- a/task/kubenetes/velero-install.yaml
+++ b/task/kubenetes/velero-install.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: velero-install
   namespace: default
 spec:
   desc: Install Velero Client && Server
