--- a/task/kubenetes/velero-restore.yaml
+++ b/task/kubenetes/velero-restore.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: velero-restore
   namespace: default
 spec:
   desc: Restore Kubernetes Using Velero
