--- a/task/kubenetes/velero-uninstall.yaml
+++ b/task/kubenetes/velero-uninstall.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: velero-uninstall
   namespace: default
 spec:
   desc: Uninstall Velero
