--- a/task/get-osstaus.yaml
+++ b/task/get-osstaus.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: default
 spec:
   desc: Get OS Info
+  schedule: everyminute
+  hostRef: dev1
   steps:
     - name: Kernel Version
       script: uname -r
@@ -19,10 +21,10 @@ spec:
     - name: Open Files Number
       script: cat /proc/sys/fs/file-nr |awk '{printf "%.2f%%/%s\n", $1*100/$3, $3}'
     - name: User Instances
-      script: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `sysctl fs.inotify.max_user_instances|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
+      script: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `/sbin/sysctl fs.inotify.max_user_instances|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
     - name: User Watches
-      script: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U %p %c' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `sysctl fs.inotify.max_user_watches|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
+      script: echo `find /proc/*/fd/* -type l -lname 'anon_inode:inotify' -print 2>/dev/null | cut -d/ -f3 |xargs -I '{}' -- ps --no-headers -o '%U %p %c' -p '{}' | sort | uniq -c | sort -nr | awk 'BEGIN {max = 0} {if ($1+0 > max+0) max=$1} END {print max}'` `/sbin/sysctl fs.inotify.max_user_watches|awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
     - name: PID Usage
       script: echo `ps -eLf | wc -l` `cat /proc/sys/kernel/pid_max` | awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
     - name: ARP Router
-      script: echo `arp -an | wc -l` `sysctl net.ipv4.neigh.default.gc_thresh1 | awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
+      script: echo `/usr/sbin/arp -an | wc -l` `/sbin/sysctl net.ipv4.neigh.default.gc_thresh1 | awk '{print $3}'` |awk '{printf "%.2f%%/%s\n", $1*100/$2, $2}'
