--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -8,6 +8,32 @@ rules:
 - apiGroups:
   - crd.chenshaowen.com
   resources:
+  - clusters
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - clusters/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - clusters/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
   - hosts
   verbs:
   - create
