--- a/config/crd/bases/crd.chenshaowen.com_hosts.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_hosts.yaml
@@ -25,6 +25,9 @@ spec:
     - jsonPath: .status.distribution
       name: Distribution
       type: string
+    - jsonPath: .status.arch
+      name: Arch
+      type: string
     - jsonPath: .status.cputotal
       name: CPU
       type: string
@@ -80,6 +83,8 @@ spec:
           status:
             description: HostStatus defines the observed state of Host
             properties:
+              arch:
+                type: string
               cpuload1:
                 type: string
               cputotal:
