--- a/config/crd/bases/crd.chenshaowen.com_tasks.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_tasks.yaml
@@ -16,17 +16,20 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.schedule
-      name: Schedule
+    - jsonPath: .spec.crontab
+      name: Crontab
       type: string
-    - jsonPath: .spec.hostRef
-      name: HostRef
+    - jsonPath: .spec.typeRef
+      name: TypeRef
       type: string
-    - jsonPath: .status.lastScheduleTime
-      name: LastScheduleTime
+    - jsonPath: .spec.nameRef
+      name: NameRef
       type: string
-    - jsonPath: .status.lastStatus
-      name: LastStatus
+    - jsonPath: .status.lastRunTime
+      name: LastRunTime
+      type: string
+    - jsonPath: .status.lastRunStatus
+      name: LastRunStatus
       type: string
     name: v1
     schema:
@@ -47,15 +50,17 @@ spec:
           spec:
             description: TaskSpec defines the desired state of Task
             properties:
-              desc:
+              crontab:
                 type: string
-              hostRef:
+              desc:
                 type: string
               name:
                 type: string
-              schedule:
+              nameRef:
                 type: string
-              selector:
+              nodeName:
+                type: string
+              nodeselector:
                 description: A label selector is a label query over a set of resources.
                   The result of matchLabels and matchExpressions are ANDed. An empty
                   label selector matches all objects. A null label selector matches
@@ -103,6 +108,8 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              runtimeImage:
+                type: string
               steps:
                 items:
                   properties:
@@ -122,6 +129,56 @@ spec:
                       type: string
                   type: object
                 type: array
+              typeRef:
+                type: string
+              typeSelector:
+                description: A label selector is a label query over a set of resources.
+                  The result of matchLabels and matchExpressions are ANDed. An empty
+                  label selector matches all objects. A null label selector matches
+                  no objects.
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: A label selector requirement is a selector that
+                        contains values, a key, and an operator that relates the key
+                        and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: operator represents a key's relationship to
+                            a set of values. Valid operators are In, NotIn, Exists
+                            and DoesNotExist.
+                          type: string
+                        values:
+                          description: values is an array of string values. If the
+                            operator is In or NotIn, the values array must be non-empty.
+                            If the operator is Exists or DoesNotExist, the values
+                            array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: matchLabels is a map of {key,value} pairs. A single
+                      {key,value} in the matchLabels map is equivalent to an element
+                      of matchExpressions, whose key field is "key", the operator
+                      is "In", and the values array contains only "value". The requirements
+                      are ANDed.
+                    type: object
+                type: object
+                x-kubernetes-map-type: atomic
               variables:
                 additionalProperties:
                   type: string
@@ -130,28 +187,25 @@ spec:
           status:
             description: TaskStatus defines the observed state of Task
             properties:
-              lastScheduleTime:
-                format: date-time
-                type: string
-              lastStatus:
+              lastRunStatus:
                 description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
                 type: string
-              recentRunOutput:
-                items:
-                  properties:
-                    runOutputSteps:
-                      items:
-                        properties:
-                          Output:
-                            type: string
-                          name:
-                            type: string
-                        type: object
-                      type: array
-                  type: object
-                type: array
+              lastRunTime:
+                format: date-time
+                type: string
+              output:
+                additionalProperties:
+                  items:
+                    properties:
+                      stepName:
+                        type: string
+                      stepOutput:
+                        type: string
+                    type: object
+                  type: array
+                type: object
             type: object
         type: object
     served: true
