--- a/task/docker-clear.yaml
+++ b/task/docker-clear.yaml
@@ -4,7 +4,7 @@ metadata:
   name: docker-clear
   namespace: default
 spec:
-  nameRef: tekton-prod1
+  nameRef: dev2
   typeRef: cluster
   nodeName: node4
   desc: Docker Clear
