--- a/config/crd/bases/crd.chenshaowen.com_tasks.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_tasks.yaml
@@ -27,7 +27,7 @@ spec:
       type: string
     - jsonPath: .status.lastRunTime
       name: LastRunTime
-      type: string
+      type: date
     - jsonPath: .status.lastRunStatus
       name: LastRunStatus
       type: string
