--- a/config/crd/bases/crd.chenshaowen.com_tasks.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_tasks.yaml
@@ -19,10 +19,10 @@ spec:
     - jsonPath: .spec.crontab
       name: Crontab
       type: string
-    - jsonPath: .spec.typeRef
+    - jsonPath: .spec.typeref
       name: TypeRef
       type: string
-    - jsonPath: .spec.nameRef
+    - jsonPath: .spec.nameref
       name: NameRef
       type: string
     - jsonPath: .spec.all
@@ -61,9 +61,9 @@ spec:
                 type: string
               name:
                 type: string
-              nameRef:
+              nameref:
                 type: string
-              nodeName:
+              nodename:
                 type: string
               nodeselector:
                 description: A label selector is a label query over a set of resources.
@@ -134,8 +134,6 @@ spec:
                       type: string
                   type: object
                 type: array
-              typeRef:
-                type: string
               typeSelector:
                 description: A label selector is a label query over a set of resources.
                   The result of matchLabels and matchExpressions are ANDed. An empty
@@ -184,6 +182,8 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              typeref:
+                type: string
               variables:
                 additionalProperties:
                   type: string
