--- a/task/clear-docker.yaml
+++ b/task/clear-docker.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: docker-clear
+  name: clear-docker
   namespace: default
 spec:
   crontab: 0 0 22 * * 2
